Loki: Only use stmt functions via imported headers in Loki variants
This removes a lot of the handholding needed for the C-specific
transpile variant, where the utility functions where previously
inlined from re-written elemental functions. Instead we now configure
the Loki `InlineTransformation` to inline those, and force the CLOUDSC
kernel to be preprocessed, so that we may find the comdeck functions.

Note, I've left the source for the re-written elemental functions in
the common directory for reference. If that becomes annoying, these
can now be removed.

--- a/src/cloudsc_loki/cloudsc_loki.config
+++ b/src/cloudsc_loki/cloudsc_loki.config
@@ -83,6 +83,9 @@ frontend = 'FP'
 [frontend_args."yoecldp.F90"]
 frontend = 'FP'
 
+[frontend_args."cloudsc.F90"]
+preprocess = true
+
 
 # Define specific transformation settings
 # -------------------------------------------------------------------
@@ -120,6 +123,18 @@ frontend = 'FP'
   block_dim = '%dimensions.block_dim%'
   directive = 'openmp'
   check_bounds = true
+
+
+[transformations.InlineTransformation]
+  classname = 'InlineTransformation'
+  module = 'loki.transformations'
+[transformations.InlineTransformation.options]
+  inline_internals = false
+  inline_marked = true
+  inline_stmt_funcs = true
+  remove_dead_code = true
+  allowed_aliases = 'JL'
+  resolve_sequence_association = false
 
 
 # Loki-SCC family of transformations
