--- a/src/cloudsc_loki/cloudsc_cuf_loki.config
+++ b/src/cloudsc_loki/cloudsc_cuf_loki.config
@@ -73,6 +73,57 @@ expand = true
   derived_types = ['TECLDP']
   dic2p = {NLEV = 137}
 
+[transformations.SccCuda-hoist]
+  classname = 'SCCLowLevelHoist'
+  module = 'loki.transformations.single_column'
+[transformations.SccCuda-hoist.options]
+  transformation_type = 'hoist'
+  horizontal = '%dimensions.horizontal%'
+  vertical = '%dimensions.vertical%'
+  block_dim = '%dimensions.block_dim%'
+  derived_types = ['TECLDP']
+  mode = 'cuda'
+  as_kwarguments = true
+  hoist_parameters = false
+  ignore_modules = ['parkind1']
+  all_derived_types = true
+
+[transformations.SccCuda-parametrise]
+  classname = 'SCCLowLevelParametrise'
+  module = 'loki.transformations.single_column'
+[transformations.SccCuda-parametrise.options]
+  transformation_type = 'parametrise'
+  horizontal = '%dimensions.horizontal%'
+  vertical = '%dimensions.vertical%'
+  block_dim = '%dimensions.block_dim%'
+  derived_types = ['TECLDP']
+  mode = 'cuda'
+  # dim_vars = ['%dimensions.vertical.size%']
+  as_kwarguments = true
+  hoist_parameters = false
+  ignore_modules = ['parkind1']
+  all_derived_types = true
+  dic2p = {NLEV = 137}
+
+# Frontend argument overrides
+# -------------------------------------------------------------------
+# Certain header modules can only be processed by the FP frontend
+[frontend_args]
+
+[frontend_args."yomphyder.F90"]
+frontend = 'FP'
+
+[frontend_args."yomcst.F90"]
+frontend = 'FP'
+
+[frontend_args."yoethf.F90"]
+frontend = 'FP'
+
+[frontend_args."yoecldp.F90"]
+frontend = 'FP'
+
+[frontend_args."cuf_cloudsc.F90"]
+preprocess = true
 
 # Housekeeping and other transformations
 # -----------------------------------------
@@ -113,3 +164,13 @@ expand = true
   transformations = [
     'Sanitise', 'DataOffload', 'SccCuf-hoist', 'ModuleWrap', 'Dependency'
   ]
+
+[pipelines.cuda-parametrise]
+  transformations = [
+    'Sanitise', 'SccCuda-hoist'
+]
+
+[pipelines.cuda-hoist]
+  transformations = [
+    'Sanitise', 'SccCuda-hoist'
+]
