--- a/bundle.yml
+++ b/bundle.yml
@@ -36,7 +36,7 @@ projects :
 
     - loki :
         git     : https://github.com/ecmwf-ifs/loki
-        version : main
+        version : nams-integrate-cloudsc-loki-cuda
         require : ecbuild
         cmake   : >
             LOKI_ENABLE_TESTS=OFF
