Make custom/additional entry points/source files obsolete for CUDA C/Fortran via Loki

--- a/src/cloudsc_loki/cloudsc_loki.config
+++ b/src/cloudsc_loki/cloudsc_loki.config
@@ -21,7 +21,12 @@ enable_imports = true  # Chase dependencies incurred via imports
 
 # Ensure that we are never adding these to the tree, and thus
 # do not attempt to look up the source files for these.
-disable = ['timer_mod', 'abort', 'file_io_mod', 'foe*', 'fokoop']
+# disable = ['timer_mod', 'abort', 'file_io_mod', 'foe*', 'fokoop',
+#   'ceiling', 'dim3', 'cuda*', 'yoethf_cuf', 'yomcst_cuf']
+disable = [
+    'timer_mod', 'abort', 'file_io_mod', 'foe*', 'fokoop',
+    'ceiling', 'dim3', 'cuda*', 'yoethf_cuf', 'yomcst_cuf',
+]
 
 # Prune these moduels from the treeto ensure they are not processed by
 # transformations
@@ -64,7 +69,8 @@ ignore = ['parkind1', 'yomphyder', 'yoecldp', 'fc*_mod']
 [dimensions.block_dim]
   size = 'NGPBLKS'
   index = 'IBL'
-
+  aliases = ['JKGLO']  
+  index_aliases = ['JKGLO']
 
 # Frontend argument overrides
 # -------------------------------------------------------------------
@@ -169,6 +175,63 @@ preprocess = true
   directive = 'openacc'
   check_bounds = false
 
+###
+# Please note that these are intended for eventual refactoring!
+[transformations.SccCuf-hoist]
+  classname = 'SCCLowLevelCufHoist'
+  module = 'loki.transformations.single_column'
+[transformations.SccCuf-hoist.options]
+  transformation_type = 'hoist'
+  horizontal = '%dimensions.horizontal%'
+  vertical = '%dimensions.vertical%'
+  block_dim = '%dimensions.block_dim%'
+  derived_types = ['TECLDP']
+  ignore_modules = ['parkind1']
+
+[transformations.SccCuf-parametrise]
+  classname = 'SCCLowLevelCufParametrise'
+  module = 'loki.transformations.single_column'
+[transformations.SccCuf-parametrise.options]
+  transformation_type = 'parametrise'
+  horizontal = '%dimensions.horizontal%'
+  vertical = '%dimensions.vertical%'
+  block_dim = '%dimensions.block_dim%'
+  derived_types = ['TECLDP']
+  ignore_modules = ['parkind1']
+  dic2p = {NLEV = 137}
+
+[transformations.SccCuda-hoist]
+  classname = 'SCCLowLevelHoist'
+  module = 'loki.transformations.single_column'
+[transformations.SccCuda-hoist.options]
+  transformation_type = 'hoist'
+  horizontal = '%dimensions.horizontal%'
+  vertical = '%dimensions.vertical%'
+  block_dim = '%dimensions.block_dim%'
+  derived_types = ['TECLDP']
+  mode = 'cuda'
+  as_kwarguments = true
+  hoist_parameters = false
+  ignore_modules = ['parkind1']
+  all_derived_types = true
+
+[transformations.SccCuda-parametrise]
+  classname = 'SCCLowLevelParametrise'
+  module = 'loki.transformations.single_column'
+[transformations.SccCuda-parametrise.options]
+  transformation_type = 'parametrise'
+  horizontal = '%dimensions.horizontal%'
+  vertical = '%dimensions.vertical%'
+  block_dim = '%dimensions.block_dim%'
+  derived_types = ['TECLDP']
+  mode = 'cuda'
+  # dim_vars = ['%dimensions.vertical.size%']
+  as_kwarguments = true
+  hoist_parameters = false
+  ignore_modules = ['parkind1']
+  all_derived_types = true
+  dic2p = {NLEV = 137}
+###
 
 # Housekeeping and other transformations
 # -------------------------------------------------------------------
@@ -226,3 +289,27 @@ preprocess = true
 
 [pipelines.scc-stack]
   transformations = ['DataOffload', 'Sanitise', 'SCCStack', 'ModuleWrap', 'Dependency']
+
+# SCC-CUF transformation pipelines
+# -----------------------------------------
+# [pipelines]
+
+[pipelines.cuf-parametrise]
+  transformations = [
+    'Sanitise', 'DataOffload', 'SccCuf-parametrise', 'ModuleWrap', 'Dependency'
+  ]
+
+[pipelines.cuf-hoist]
+  transformations = [
+    'Sanitise', 'DataOffload', 'SccCuf-hoist', 'ModuleWrap', 'Dependency'
+  ]
+  
+[pipelines.cuda-parametrise]
+  transformations = [ 
+    'Sanitise', 'SccCuda-hoist'
+] 
+  
+[pipelines.cuda-hoist]
+  transformations = [
+    'Sanitise', 'SccCuda-hoist'
+] 
