--- a/src/cloudsc_loki/cloudsc_loki_omp.config
+++ b/src/cloudsc_loki/cloudsc_loki_omp.config
@@ -160,8 +160,8 @@ preprocess = true
 [transformations.SCCVector.options]
   horizontal = '%dimensions.horizontal%'
   block_dim = '%dimensions.block_dim%'
-  directive = 'openacc'
-  seq_kernels = false
+  directive = 'omp-gpu'
+  seq_kernels = true
 
 
 [transformations.SCCHoist]
@@ -171,6 +171,7 @@ preprocess = true
   horizontal = '%dimensions.horizontal%'
   block_dim = '%dimensions.block_dim%'
   directive = 'openacc'
+  # directive = 'omp-gpu'
   seq_kernels = false
 
 
@@ -180,9 +181,9 @@ preprocess = true
 [transformations.SCCStack.options]
   horizontal = '%dimensions.horizontal%'
   block_dim = '%dimensions.block_dim%'
-  directive = 'openacc'
+  directive = 'omp-gpu'
   check_bounds = false
-  seq_kernels = false
+  seq_kernels = true
 
 
 # Housekeeping and other transformations
@@ -192,6 +193,10 @@ preprocess = true
   module = 'loki.transformations'
   options = { remove_openmp = true, claw_data_offload = false }
 
+[transformations.DataOffloadOpenMP]
+  classname = 'DataOffloadTransformation'
+  module = 'loki.transformations'
+  options = { remove_openmp = true, claw_data_offload = false, directive = 'omp-gpu' }
 
 [transformations.Sanitise]
   classname = 'SanitiseTransformation'
@@ -230,13 +235,14 @@ preprocess = true
   transformations = ['Idem', 'Sanitise', 'Stack', 'ModuleWrap', 'Dependency']
 
 [pipelines.scc]
-  transformations = ['DataOffload', 'SCCVector', 'ModuleWrap', 'Dependency']
+  # transformations = ['DataOffload', 'SCCVector', 'ModuleWrap', 'Dependency']
+  transformations = ['DataOffloadOpenMP', 'SCCVector', 'ModuleWrap', 'Dependency']
 
 [pipelines.scc-hoist]
-  transformations = ['DataOffload', 'SCCHoist', 'ModuleWrap', 'Dependency']
+  transformations = ['DataOffloadOpenMP', 'SCCHoist', 'ModuleWrap', 'Dependency']
 
 [pipelines.scc-stack]
-  transformations = ['DataOffload', 'Sanitise', 'SCCStack', 'ModuleWrap', 'Dependency']
+  transformations = ['DataOffloadOpenMP', 'Sanitise', 'SCCStack', 'ModuleWrap', 'Dependency']
 
 [pipelines.c]
   transformations = ['Sanitise', 'Inline', 'FortranToC', 'FortranISOCWrapper', 'ModuleWrap', 'Dependency_CToF']
