Rewrite CMake for Loki variants

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,4 +17,6 @@ add_subdirectory(cloudsc_cuda)
 add_subdirectory(cloudsc_hip)
 add_subdirectory(cloudsc_sycl)
 add_subdirectory(cloudsc_gpu)
+if( HAVE_LOKI )
 add_subdirectory(cloudsc_loki)
+endif()
