--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,7 +13,9 @@ add_subdirectory(cloudsc_fortran_atlas)
 add_subdirectory(cloudsc_pyiface)
 add_subdirectory(cloudsc_python)
 add_subdirectory(cloudsc_c)
+if( HAVE_CUDA )
 add_subdirectory(cloudsc_cuda)
+endif()
 add_subdirectory(cloudsc_hip)
 add_subdirectory(cloudsc_sycl)
 add_subdirectory(cloudsc_gpu)
